--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@clerk/nextjs": "^4.29.5",
     "@prisma/adapter-pg": "^5.9.1",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "next": "^14.0.4",
     "pg": "^8.11.3",
     "react": "18.2.0",
@@ -29,6 +32,8 @@
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "svix": "^1.16.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
