--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/adapter-pg": "^5.9.1",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -29,6 +34,8 @@
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-select": "^5.8.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "svix": "^1.16.0",
