--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/adapter-pg": "^5.9.1",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -45,6 +46,7 @@
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "svix": "^1.16.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
