--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.27.7",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/pg": "^8.11.0",
