--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
+    "git-filter-repo": "^0.0.30",
     "localtunnel": "^2.0.2",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
