--- a/package.json
+++ b/package.json
@@ -26,16 +26,13 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.43.6",
-    "@trpc/next": "^10.43.6",
-    "@trpc/react-query": "^10.43.6",
-    "@trpc/server": "^10.43.6",
+    "@tanstack/react-query": "^5.28.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
-    "next": "^14.0.4",
+    "next": "^14.1.3",
+    "next-themes": "^0.3.0",
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
@@ -44,9 +41,9 @@
     "react-select": "^5.8.0",
     "react-time-picker": "^6.6.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.3",
     "superjson": "^2.2.1",
     "svix": "^1.16.0",
-    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
