--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
     "@hookform/resolvers": "^3.3.4",
+    "@million/lint": "^0.0.73",
     "@prisma/adapter-pg": "^5.9.1",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-checkbox": "^1.0.4",
