--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
+    "million": "^3.0.6",
     "next": "^14.1.3",
     "next-themes": "^0.3.0",
     "pg": "^8.11.3",
