--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^1.4.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.26.0"
