--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.27.7",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/pg": "^8.11.0",
@@ -59,10 +61,12 @@
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
     "git-filter-repo": "^0.0.30",
+    "happy-dom": "^14.3.1",
     "localtunnel": "^2.0.2",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
